--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 fastapi==0.104.1
-uvicorn==0.24.0
-sqlalchemy==2.0.23
-aiosqlite==0.19.0
-numpy==1.24.3
-scikit-learn==1.3.2
-cryptography==41.0.7
+uvicorn[standard]==0.24.0
 python-multipart==0.0.6
-pydantic==2.5.0
+pyjwt==2.8.0
+bcrypt==4.0.1
+pydantic[email]==2.5.0
+httpx==0.25.2
+pytz==2023.3
+psutil==5.9.6
+requests==2.31.0
+numpy==1.26.4
+scikit-learn==1.4.2
+setuptools==69.5.1
