--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ requests==2.31.0
 numpy==1.26.4
 scikit-learn==1.4.2
 setuptools==69.5.1
+
+sqlalchemy==2.0.25
+pymysql==1.1.0
+passlib==1.7.4
+python-dotenv==1.0.0
